--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+amqp==1.4.9
+anyjson==0.3.3
 appdirs==1.4.0
 backports.shutil-get-terminal-size==1.0.0
+billiard==3.3.0.23
+bootstrap-admin==0.3.7.1
+celery==3.1.25
 decorator==4.0.11
 Django==1.10.5
+django-allauth==0.30.0
+django-celery==3.2.1
 django-cors-headers==2.0.2
 django-filter==1.0.1
 djangorestframework==3.5.3
 enum34==1.1.6
 ipython==5.2.2
 ipython-genutils==0.1.0
+kombu==3.0.37
 Markdown==2.6.8
+oauthlib==2.0.1
 packaging==16.8
 pathlib2==2.2.1
 pexpect==4.2.1
@@ -18,6 +27,10 @@ psycopg2==2.6.2
 ptyprocess==0.5.1
 Pygments==2.2.0
 pyparsing==2.1.10
+python-openid==2.2.5
+pytz==2016.10
+requests==2.13.0
+requests-oauthlib==0.8.0
 scandir==1.4
 simplegeneric==0.8.1
 six==1.10.0
